[gd_scene load_steps=9 format=3 uid="uid://vhww5v2ktkm"]

[ext_resource type="Script" uid="uid://dm6r4h0wbtd7w" path="res://scenes/screens/level/level_002.gd" id="1_wutay"]
[ext_resource type="Texture2D" uid="uid://c426g8qtx56kx" path="res://assets/level_001/background.jpg" id="2_wutay"]
[ext_resource type="PackedScene" uid="uid://ob0ovq4xg4jv" path="res://scenes/player/player.tscn" id="3_qien1"]
[ext_resource type="Script" uid="uid://blxxlvexrcda4" path="res://scenes/screens/level/explosion.gd" id="4_m3r38"]
[ext_resource type="AudioStream" uid="uid://dne1idfkjcalw" path="res://assets/audio/explosion.wav" id="5_xwhuh"]
[ext_resource type="PackedScene" uid="uid://c8jbdlcvueayc" path="res://scenes/entity/enemies/enemy.tscn" id="6_occsn"]
[ext_resource type="AudioStream" uid="uid://bcog7pp04jj02" path="res://assets/audio/level_001.wav" id="7_nblkf"]

[sub_resource type="GDScript" id="GDScript_4b27v"]

[node name="Level2" type="Node2D"]
script = ExtResource("1_wutay")

[node name="ObjectParent" type="Node2D" parent="."]
position = Vector2(540, 960)

[node name="Background" type="Sprite2D" parent="ObjectParent"]
z_index = -10
position = Vector2(76.169914, 99.57984)
scale = Vector2(5.434153, 7.4729786)
texture = ExtResource("2_wutay")

[node name="Player" parent="ObjectParent" instance=ExtResource("3_qien1")]
position = Vector2(0.9999995, 587)
scale = Vector2(5, 5)

[node name="Projectiles" type="Node2D" parent="ObjectParent"]
position = Vector2(-540, -960)

[node name="Explosion" type="Node" parent="ObjectParent"]
script = ExtResource("4_m3r38")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ObjectParent/Explosion"]
stream = ExtResource("5_xwhuh")

[node name="Enemies" type="Node" parent="ObjectParent"]
script = SubResource("GDScript_4b27v")

[node name="Enemy" parent="ObjectParent/Enemies" instance=ExtResource("6_occsn")]
position = Vector2(544, 680)

[node name="Enemy2" parent="ObjectParent/Enemies" instance=ExtResource("6_occsn")]
position = Vector2(552, 298)

[node name="Enemy3" parent="ObjectParent/Enemies" instance=ExtResource("6_occsn")]
position = Vector2(552, 487)

[node name="Enemy4" parent="ObjectParent/Enemies" instance=ExtResource("6_occsn")]
position = Vector2(541, 907)

[node name="Texts" type="Node" parent="ObjectParent"]

[node name="objective" type="Label" parent="ObjectParent/Texts"]
modulate = Color(1, 1, 1, 0)
offset_left = 4.0
offset_top = 797.0
offset_right = 1090.0
offset_bottom = 1216.0
theme_override_font_sizes/font_size = 80
text = "Destroy all Ships
Swipe to move left and right
tap to shoot"

[node name="congrats" type="Label" parent="ObjectParent/Texts"]
modulate = Color(1, 1, 1, 0)
offset_left = 222.0
offset_top = 864.0
offset_right = 836.0
offset_bottom = 1050.0
theme_override_font_sizes/font_size = 80
text = "You Win !!!"

[node name="failure" type="Label" parent="ObjectParent/Texts"]
modulate = Color(1, 1, 1, 0)
offset_left = 222.0
offset_top = 864.0
offset_right = 836.0
offset_bottom = 1050.0
theme_override_font_sizes/font_size = 80
text = "You Lose!!!"

[node name="Ammo_text" type="Label" parent="ObjectParent/Texts"]
offset_left = 688.0
offset_top = 46.0
offset_right = 887.0
offset_bottom = 116.0
theme_override_font_sizes/font_size = 50
text = "Ammo : "

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_nblkf")

[connection signal="ammo_done" from="ObjectParent/Player" to="." method="_on_player_ammo_done"]
[connection signal="laser_shot" from="ObjectParent/Player" to="." method="_on_player_laser_shot"]
